--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,43 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
     width: 100%;
     height: 100vh;
-    margin: 0;
     background-color: #1b1b32;
     color: #f5f6f7;
+    font-size: 18px;
   }
-  
+  .first{
+    margin-top: 15px;
+    margin-bottom: 5px;
+  }
+  .second,.third{
+    margin-bottom: 3px;
+  }
+
   label {
     display: flex;
-    margin: 0.5rem 0;
+    margin: 0.5rem 0.5rem;
     flex-direction: row;
     justify-content: flex-start;
-    align-items: center
+    align-items: center;
+    /* background-color: rgb(211, 128, 19); */
+
+  }
+  input , select,textarea{
+    margin:7px;
+  }
+  textarea::placeholder{
+    color: rgb(186, 186, 186);
+  }
+
+  #term-anchor{
+    text-decoration: none;
+    color: #f5f6f7;
+    font-weight: bolder;
+    cursor: pointer;
+
   }
